# Fourmi-de-Langton

./: .gitlab-ci.yml  README.md  cert.csr  cert.pem  client.py  config.yaml  environment.yml  generateur_token.py  key.pem  pyproject.toml  sauvegarde.json  score.sh  server.py
fourmi/: affichage.py  config.py  fourmi.py  grille.py
tests/: test_fourmi.py  test_server.py
